welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
fizzBuzz:2: error: unclosed character literal
  if (a%3==0) {return 'Fizz'}
                           ^fizzBuzz:3: error: unclosed character literal
  else if (a%5==0) {return 'Buzz'}
                                ^fizzBuzz:4: error: unclosed character literal
  else if (a%3==0 && a%5==0) {return 'Fizz Buzz'}
                                               ^fizzBuzz:-6: error: Missing closing brace `}' assumed here
try {
^fizzBuzz:1: error: expected class or object definition
def fizzBuzz(a:Int):String = {
^fizzBuzz:2: error: unclosed character literal
  if (a%3==0) {return 'Fizz'}
                           ^fizzBuzz:3: error: unclosed character literal
  else if (a%5==0) {return 'Buzz'}
                                ^fizzBuzz:4: error: Missing closing brace `}' assumed here
  else if (a%3==0 && a%5==0) {return 'Fizz Buzz'}
  ^fizzBuzz:4: error: unclosed character literal
  else if (a%3==0 && a%5==0) {return 'Fizz Buzz'}
                                               ^fizzBuzz:5: error: Missing closing brace `}' assumed here
  else {return ""+a}
  ^