welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if ( (isSummer == false && temp>59 && temp <91) || (isSummer==true && temp>59 && temp <101) ) {return true} else {return false}
}